--- a/archives/zhihu-questions/2024-05-03.md
+++ b/archives/zhihu-questions/2024-05-03.md
@@ -1,9 +1,9 @@
 # 2024-05-03
 
-共 60 条
+共 61 条
 
 <!-- BEGIN ZHIHUQUESTIONS -->
-<!-- 最后更新时间 Fri May 03 2024 02:06:54 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri May 03 2024 03:00:39 GMT+0800 (China Standard Time) -->
 1. [网友爆料拍下周鸿祎二手迈巴赫的褚会长至今未付尾款，疑似爽约，周鸿祎回应「稍安勿躁」，如何看待此事？](https://www.zhihu.com/question/654718239)
 1. [特斯拉整个超级充电团队被解散，特斯拉市值一夜蒸发 2487 亿元，哪些信息值得关注？](https://www.zhihu.com/question/654714773)
 1. [如何看待小米汽车（SU7）4月第4周交付1670辆，连续两周销量下滑？](https://www.zhihu.com/question/654606692)
@@ -21,13 +21,14 @@
 1. [美国被曝将帮助沙特发展半导体，但要求沙特限制使用中国技术，暴露出美方哪些企图？](https://www.zhihu.com/question/654771999)
 1. [扎哈罗娃称，欧盟那些决定把适龄青年送回乌克兰的人「真是罕见的人渣」，如何看待欧盟此举？](https://www.zhihu.com/question/654682338)
 1. [万科公布2024Q1业绩，营收和净利润均下跌，净利润为负3.62亿元，同比暴跌125%，这是什么信号？](https://www.zhihu.com/question/654562635)
-1. [山西恒山景区发生落石事件，造成 1 死 5 伤，具体情况如何？](https://www.zhihu.com/question/654794790)
 1. [如何评价全新的神经网络架构KAN的爆火，是否有潜力取代MLP？](https://www.zhihu.com/question/654782350)
+1. [山西恒山景区发生落石事件，造成 1 死 5 伤，具体情况如何？](https://www.zhihu.com/question/654794790)
 1. [梅大高速 4 月底刚完成安全隐患排查，造成此次事故有哪些因素？该如何警惕？](https://www.zhihu.com/question/654776117)
-1. [如何评价ICML 2024的录用结果?](https://www.zhihu.com/question/651459078)
 1. [如何评价《一人之下》漫画670（711）话?](https://www.zhihu.com/question/654800638)
+1. [如何评价ICML 2024的录用结果?](https://www.zhihu.com/question/651459078)
 1. [JDG 官宣前世界冠军教练战马加盟，你对他的加盟有哪些期待？](https://www.zhihu.com/question/654765361)
 1. [如何评价《英雄联盟》14.10 版本海量更新？](https://www.zhihu.com/question/654667949)
+1. [如何看待鹰角被发现暗改《明日方舟》福利文案？](https://www.zhihu.com/question/654615392)
 1. [如何评价《英雄联盟》14.10删除致命节奏?](https://www.zhihu.com/question/654629417)
 1. [Steam上的游戏《大多数》为啥突然凉了?](https://www.zhihu.com/question/625130967)
 1. [公公去世好几年了，婆婆要再找老伴，咋办？](https://www.zhihu.com/question/654411141)
@@ -37,8 +38,8 @@
 1. [哪一刻，你开始不再善良？](https://www.zhihu.com/question/646456270)
 1. [如果《崩坏星穹铁道》查德维克博士最后去的是仙舟而不是匹诺康尼，会怎么样？](https://www.zhihu.com/question/653004750)
 1. [仆人传说任务后如何重新看待纳西妲传说任务？](https://www.zhihu.com/question/654360943)
-1. [单张4090能运行的最强开源大模型是哪个？](https://www.zhihu.com/question/649233834)
 1. [哥伦比亚总统宣布断绝与以色列外交关系，抗议以色列在加沙地带的种族灭绝行动，如何解读？](https://www.zhihu.com/question/654747674)
+1. [单张4090能运行的最强开源大模型是哪个？](https://www.zhihu.com/question/649233834)
 1. [作为「运动爱好者」，你家都有哪些坚持了很久的亲子运动方式？](https://www.zhihu.com/question/653432635)
 1. [农村孩子最缺什么？](https://www.zhihu.com/question/646820089)
 1. [社会的本质究竟是什么？](https://www.zhihu.com/question/499152042)
@@ -46,9 +47,9 @@
 1. [如何评价2024年ICPC全国邀请赛（武汉）？](https://www.zhihu.com/question/648600132)
 1. [naive必须写成naïve吗？](https://www.zhihu.com/question/653679530)
 1. [文笔挑战：我于人间看夕阳，———————。你会怎么接？](https://www.zhihu.com/question/654753655)
+1. [下午三点离职五点整个部门涨薪了。是你的话是毅然离开，还是去跟公司反悔?](https://www.zhihu.com/question/654709985)
 1. [梅大高速塌陷后，市民自发献血，目前救援进展如何？当地血库告急问题是否得到了解决？](https://www.zhihu.com/question/654751925)
 1. [2024年了，大家怎么看待《原神》散兵的故事？](https://www.zhihu.com/question/654718292)
-1. [下午三点离职五点整个部门涨薪了。是你的话是毅然离开，还是去跟公司反悔?](https://www.zhihu.com/question/654709985)
 1. [初中生，感觉周围同龄人思想短浅怎么办？](https://www.zhihu.com/question/649868468)
 1. [可以分享一张你相册里的小猫咪吗?](https://www.zhihu.com/question/654311199)
 1. [2024 年五一档电影你看了哪部？你是否推荐？](https://www.zhihu.com/question/654374799)
